--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Django Explore</title>
-  </head>
-  <body>
-    <h2>About Django Explore....</h2>
-  </body>
-</html>
+{% extends 'base.html' %}
+
+{% block body %}
+  <h2>About Django Explore...</h2>
+{% endblock %}
