--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Django Explore</title>
-  </head>
-  <body>
-    <h2>Welcome to Django Explore!</h2>
-  </body>
-</html>
+{% extends 'base.html' %}
+
+{% block body %}
+  <h2>Welcome to Django Explore!</h2>
+  {% include 'footer.html' %}
+{% endblock %}
