--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,8 +1,13 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Django Explore</title>
+    <link rel="stylesheet" href="{% static 'css/materialize.css' %}" media="screen" title="no title" charset="utf-8">
+    <script src="{% static 'js/app.js' %}"></script>
+
   </head>
   <body>
     {% block body %}{% endblock %}
