switch reddit to topics

--- a/posts/templates/posts/posts.html
+++ b/posts/templates/posts/posts.html
@@ -2,7 +2,7 @@
 
 {% block body %}
   <div class="container">
-    <h2 class="center-align">All Reddit Posts</h2>
+    <h2 class="center-align">All Posts</h2>
     <table class="bordered">
       <thead>
         <tr>
