--- a/posts/templates/posts/posts.html
+++ b/posts/templates/posts/posts.html
@@ -17,7 +17,7 @@
           {% if post.published %}
             <tr>
               <td>{{post.author}}</td>
-              <td>{{post.title}}</td>
+              <td><a href="{{ post.get_absolute_url }}">{{post.title}}</a></td>
               <td>{{post.create_date}}</td>
             </tr>
           {% endif %}
