--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -10,6 +10,10 @@
 
   </head>
   <body>
+    {% block navbar %}
+      {% include 'navbar.html' %}
+    {% endblock %}
+
     {% block body %}{% endblock %}
   </body>
 </html>
