--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -1,9 +1,9 @@
 <nav>
   <div class="nav-wrapper">
     <ul id="nav-mobile" class="left hide-on-med-and-down">
-      <li><a href="{% url 'home' %}">Home</a></li>
-      <li><a href="{% url 'about' %}">About</a></li>
-      <li><a href="{% url 'post-list' %}">Posts</a></li>
+      <li class="{% if page == 'home' %}active{% endif %}"><a href="{% url 'home' %}">Home</a></li>
+      <li class="{% if page == 'about' %}active{% endif %}"><a href="{% url 'about' %}">About</a></li>
+      <li class="{% if page == 'posts' %}active{% endif %}"><a href="{% url 'post-list' %}">Posts</a></li>
     </ul>
   </div>
 </nav>
