send contact email

--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -4,6 +4,7 @@
       <li class="{% if page == 'home' %}active{% endif %}"><a href="{% url 'home' %}">Home</a></li>
       <li class="{% if page == 'about' %}active{% endif %}"><a href="{% url 'about' %}">About</a></li>
       <li class="{% if page == 'posts' %}active{% endif %}"><a href="{% url 'post-list' %}">Posts</a></li>
+      <li class="{% if page == 'contact' %}active{% endif %}"><a href="{% url 'contact' %}">Contact</a></li>
     </ul>
   </div>
 </nav>
