--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -7,7 +7,8 @@
     <title>Django Explore</title>
     <link rel="stylesheet" href="{% static 'css/materialize.css' %}" media="screen" title="no title" charset="utf-8">
     <script src="{% static 'js/app.js' %}"></script>
-
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
   </head>
   <body>
     {% block navbar %}
